AC_INIT([cbz], [0.0.0], [cbz@example.com])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_LIBTOOL

LT_INIT

AC_PROG_CC


AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([include/Makefile])
AC_CONFIG_FILES([src/Makefile])
AC_CONFIG_FILES([tests/Makefile])
AC_CONFIG_FILES([cbz.pc])

AC_OUTPUT
